// AUTOMATICALLY GENERATED BY SimpleRPC

syntax = "proto3";
import "google/protobuf/empty.proto";
package TgIdAuthpkg;

service TgIdAuth {
    rpc add_auth_method(add_auth_methodRequest) returns (add_auth_methodResponce) {}
    rpc remove_auth_method(remove_auth_methodRequest) returns (remove_auth_methodResponce) {}
    rpc get_userId_by_tg_id(get_userId_by_tg_idRequest) returns (get_userId_by_tg_idResponce) {}
}

message add_auth_methodResponce {
}
message get_userId_by_tg_idResponce {
    int64 userId = 1;
}
message remove_auth_methodResponce {
}
message remove_auth_methodRequest {
    int64 tgId = 1;
}
message get_userId_by_tg_idRequest {
    int64 tgId = 1;
}
message add_auth_methodRequest {
    int64 tgId = 1;
    int64 userId = 2;
}
